fix home hero button z-index

--- a/web/src/components/pages/new-home/home.css
+++ b/web/src/components/pages/new-home/home.css
@@ -13,7 +13,7 @@
 }
 
 .home {
-    & .primary-button button {
+    & .primary-button a {
         z-index: var(--middle-z-index);
     }
 
